# ProgettoAI

task1/: domain.pddl
task2/: eseguibile.sh
task2/pddl/21/: problem.pddl
task2/pddl/22/: domain2.pddl  problem2.pddl
task2/results/21/: a_as_result.txt  a_custom_result.txt  a_ff_result.txt  ff_result.txt
task2/results/22/: a_as_result.txt  a_custom_result.txt  a_ff_result.txt  ff_result.txt
task2/src/: ASP.java  CustomHeuristic.java  Node.java
task3/3.1/: domain.pddl  output.txt  problem.pddl
task3/3.2/manufactoring_service_robots/: CMakeLists.txt  package.xml
task3/3.2/manufactoring_service_robots/launch/: commands  plansys2_msl.py
task3/3.2/manufactoring_service_robots/pddl/: domain.pddl  output.txt  problem.pddl  problem.plan
task3/3.2/manufactoring_service_robots/src/: drop_box_in_loc_action_node.cpp  drop_box_in_ws_action_node.cpp  enter_workstation_action_node.cpp  exit_workstation_action_node.cpp  load_box_in_loc_action_node.cpp  load_box_in_warehouse_action_node.cpp  load_box_in_ws_action_node.cpp  move_robot_action_node.cpp  move_robot_warehouse_action_node.cpp  pick_box_from_loc_action_node.cpp  pick_box_from_ws_action_node.cpp  unload_box_in_loc_action_node.cpp  unload_box_in_ws_action_node.cpp
